--- a/resume.html
+++ b/resume.html
@@ -140,6 +140,13 @@
 					    </div>
 						<h2 class="title title--h2"><span class="box icon-box"><i class="font-icon feathericon-book-open"></i></span>Experience</h2>
 						<div class="timeline">
+								<!-- Item -->
+							<article class="timeline__item">
+								<h5 class="title title--h4 timeline__title">Fancy LLC</h5>
+								<span class="timeline__period">2024 - Continue</span>
+								<p class="timeline__description">Project Manager</p>
+							</article>
+                                        
 							<!-- Item -->
 							<article class="timeline__item">
 								<h5 class="title title--h4 timeline__title">Aptech Garden Center</h5>
